// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Touchable> should render a disabled touchable component 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={true}
  onPress={[Function]}
  style={Object {}}
/>
`;

exports[`<Touchable> should render a touchable component 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
  onPress={[Function]}
  style={Object {}}
/>
`;
